--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A react component library",
   "main": "build/oxygen.cjs.js",
   "module": "build/oxygen.esm.js",
+  "browser": "build/oxygen.umd.js",
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w",
@@ -68,7 +69,6 @@
     "react-svg-loader": "^3.0.1",
     "rollup": "^1.11.3",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-image": "^1.0.2",
     "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-react-svg": "^3.0.0",
